--- a/2016summer.html
+++ b/2016summer.html
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top"><img src="img/logo.png"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -63,7 +63,10 @@
                         <a href="/">琉森短途</a>
                     </li>
                     <li>
-                        <a href="/">首页</a>
+                        <a href="/">博客</a>
+                    </li>
+                    <li>
+                        <a href="/">关于</a>
                     </li>
                 </ul>
             </div>
