index almost done

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                         <a href="/">首页</a>
                     </li>
                     <li>
-                        <a href="/">2016暑期游</a>
+                        <a href="/2016summer.html">2016暑期游</a>
                     </li>
                     <li>
-                        <a href="/">琉森短途</a>
+                        <a href="/luzern.html">琉森短途</a>
                     </li>
                     <li>
                         <a href="/">博客</a>
@@ -83,12 +83,12 @@
                 <h1>2016年夏天·跟着Babymosh一起游瑞士</h1>
                 <hr>
                 <p>4-10岁宝贝  |  亲子同行  |  7日深度游  |  3-5个家庭私家小团 ​</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">现在报名</a>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll btn-action">正在报名中</a>
             </div>
         </div>
     </header>
 
-    <section class="bg-primary" id="about">
+    <section class="bg-primary" id="why">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -96,17 +96,212 @@
                     <hr class="light">
                     <p class="text-faded">一句话：Babymosh提供自助游搞不定，传统旅行社不提供的<br/> ——好玩、好学、好吃的独特体验</p>
                     <table class="frontpage-why">
-                    <tr><td class="why-big">自助游？</td><td class="why-small">提前预约麻烦、德语交流困难、参观看不懂<br/>做攻略、订酒店、查火车班次，费时费力的准备成本</td></tr>
-                    <tr><td class="why-big">传统旅行社跟团？</td><td class="why-small">七日十国？<br/>大巴时光和商店时光？</td></tr>
-                    <tr><td class="why-big">我想要：</td><td class="why-small">小朋友结伴一起玩<br/>学到更多、探索更多<br/>地道独特的深度体验<br/>贴心的旅途照顾、安全第一、轻松度假</td></tr>
+                    <tr class="wow fadeIn" data-wow-delay="0.2s"><td class="why-big">自助游？</td><td class="why-small">提前预约麻烦、德语交流困难、参观看不懂<br/>做攻略、订酒店、查火车班次，费时费力的准备成本</td></tr>
+                    <tr class="wow fadeIn" data-wow-delay="0.4s"><td class="why-big">传统旅行社跟团？</td><td class="why-small">七日十国？<br/>大巴时光和商店时光？</td></tr>
+                    <tr class="wow fadeIn" data-wow-delay="0.6s"><td class="why-big">我想要：</td><td class="why-small">小朋友结伴一起玩<br/>学到更多、探索更多<br/>地道独特的深度体验<br/>贴心的旅途照顾、安全第一、轻松度假</td></tr>
                     </table>
-                    <a href="#services" class="btn btn-default btn-xl">Get Started!</a>
+                    <a href="#services" class="btn btn-default btn-xl">了解更多</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="services">
+    <section id="one">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">体验#1  在上帝后花园， 像瑞士宝贝一样<span class="stress">野</span></h2>
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row index-one-box no-gutter">
+                <div class="col-lg-4 col-sm-6"  data-wow-delay="0.1s">
+                    <img src="img/index/camping.jpg" class="img-responsive" alt="">
+                </div>
+                <div class="col-lg-4 col-sm-12 text-center" data-wow-delay="0.2s">
+                    <h3>山间Party + 高山BBQ</h3>
+                    <h4>音乐起，派对开始！像瑞士人一样拿把军刀削树枝、插起香肠上火烤；给宝贝画个小猫脸，游戏疯玩——这里绝没有旅行团</h4>
+                </div>
+                <div class="col-lg-4 col-sm-6" data-wow-delay="0.3s">
+                    <img src="img/index/game.jpg" class="img-responsive" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row index-one-box no-gutter">
+                <div class="col-lg-4 col-sm-12 text-center" data-wow-delay="0.4s" >
+                    <h3>湖边Camping + 沙滩Picnic</h3>
+                    <h4>沙滩、泳池、草地、湖水，房车露营，推门就是整个世界</h4>
+                </div>
+                <div class="col-lg-4 col-sm-6" data-wow-delay="0.5s">
+                    <img src="img/index/swim.jpg" class="img-responsive" alt="">
+                </div>
+                <div class="col-lg-4 col-sm-6" data-wow-delay="0.6s">
+                    <img src="img/index/draw.jpg" class="img-responsive" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row index-one-box no-gutter">
+                <div class="col-lg-4 col-sm-6" data-wow-delay="0.7s">
+                    <img src="img/index/hiking.jpg" class="img-responsive" alt="">
+                </div>
+                <div class="col-lg-4 col-sm-12 text-center" data-wow-delay="0.8s">
+                    <h3>阿尔卑斯Hiking + 农舍Farming</h3>
+                    <h4>来瑞士不Hiking？用1、2个小时无难度的徒步深入阿尔卑斯，体验真正的瑞士吧！偶遇山坡晒太阳的奶牛、吃草的山羊；再绕道拜访瑞士农场，近距离接触小马小猪小羊小鸡们，尝尝自家的奶酪、鸡蛋、果汁……</h4>
+                </div>
+                <div class="col-lg-4 col-sm-6" data-wow-delay="0.9s">
+                    <img src="img/index/farm.jpg" class="img-responsive" alt="">
+                </div>
+                
+            </div>
+        </div>
+    </section>
+
+    <section id="two">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">体验#2  我在旅行，我在<span class="stress">游戏</span>，我在<span class="stress">学习</span>！</h2>
+                    <p>旅行只是看看听听拍拍照吗？不！参与起来、玩起来，然后观察到更多、发现更多、真正学到更多</p>
+                    <hr class="primary">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 text-center">
+                    <img src="img/index/game.png">
+                </div>
+                <div class="col-lg-5 text-center">
+                    <img src="img/index/knowledge.png">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h3 class="section-sub-heading">Babymosh 独家提供</h2>
+                </div>
+            </div>
+            <br/><br/>
+            <div class="row">
+                <div class="col-lg-2 col-md-3 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-book wow bounceIn text-primary"></i>
+                        <h3>宝贝旅行书</h3>
+                        <p class="text-muted">独家出品，图文结合，最适合行前亲子共读</p>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-3 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-send wow bounceIn text-primary" data-wow-delay="0.2s"></i>
+                        <h3>我的旅行日志</h3>
+                        <p class="text-muted">可写可画，更可贴门票贴树叶，每天和小伙伴一起制作日志</p>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-3 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-hand-lizard-o wow bounceIn text-primary" data-wow-delay="0.4s"></i>
+                        <h3>旅行好玩包</h3>
+                        <p class="text-muted">贴纸、布偶、拼图、联线猜谜……丰富的材料包让宝贝随时忙碌起来，爸妈当然更省心</p>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-3 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-mortar-board wow bounceIn text-primary" data-wow-delay="0.6s"></i>
+                        <h3>知识小课堂</h3>
+                        <p class="text-muted">20余个小课堂模块，从吃到行，自然人文，无处不课堂</p>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-3 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-language wow bounceIn text-primary" data-wow-delay="0.8s"></i>
+                        <h3>每日德语时间</h3>
+                        <p class="text-muted">来到欧洲才能感受语言的多样性，小小外交家不妨练练嘴</p>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-3 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-coffee wow bounceIn text-primary" data-wow-delay="1s"></i>
+                        <h3>每晚共聚时光</h3>
+                        <p class="text-muted">大小宝贝统统围坐一圈，或躺或靠，就是一起聊天！却是以后最回味的大家庭时光</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="three">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">体验#3  Babymosh <span class="stress">百宝箱</span> 贴心省心</h2>
+                    <p>上午下午各需要一次点心！补充体力、更可以边吃边吃懂瑞士哦</p>
+                    <p>爸妈休息时，宝贝们就可以凑在一起玩简单的“dés”游戏（用石头、球、弹球或掷地球来玩）、瑞士纸牌雅斯、流行的桌面游戏——边玩也变懂瑞士，不是吗</p>
+                    <p>百宝箱还准备了必要的药品，以备不时。</p>
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <img src="img/index/food.jpg">
+                        <h3>零嘴能量箱</h3>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <img src="img/index/toy.jpg">
+                        <h3>玩具探索箱</h3>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <img src="img/index/tool.jpg">
+                        <h3>绘本文具箱</h3>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                      <div class="service-box">
+                        <img src="img/index/drug.jpg">
+                        <h3>医药用品箱</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="four" class="img-bg">
+        <div class="container-fluid" >
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">体验#4 <span class="stress">慢行</span></h2>
+                    <hr class="light">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <p>7天只玩瑞士！<br/>
+                    而且只玩瑞士中部！<br/>
+                    是的，慢慢行，带着宝贝细细看<br/></p>
+
+                    <p style="font-style: italic;">
+                    <h3>细节的行程设计</h3>：<br/>
+                    每日车程不超过2小时<br/>
+                    每到一处让大小宝贝充分享受的时间<br/>
+                    午休时间的安排<br/>
+                    充裕的三餐时间<br/>
+                    尽量减少酒店更换<br/>
+                    </p>
+                    <a href="#services" class="btn btn-primary btn-xl">暑期游详细行程</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -119,21 +314,21 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <img src="img/avatar/nattier.jpg">
+                        <img class="round-corner" src="img/avatar/nattier.jpg">
                         <h3>陈敏 Nattier</h3>
                         <p class="text-muted">定居瑞士卢塞恩，毕业于复旦大学，百度、华住酒店任产品设计师和用户体验负责人。2016年暑期团，全程亲自带团</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <img src="img/avatar/laura.jpg">
+                        <img class="round-corner" src="img/avatar/laura.jpg">
                         <h3>史晓婧 Laura</h3>
                         <p class="text-muted">任麦淘亲子游事业部总监，曾任湖州喜来登温泉度假酒店副总经理、罗客游学香港项目负责人</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <img src="img/avatar/ouou.png">
+                        <img class="round-corner" src="img/avatar/ouou.jpg">
                         <h3>鸥鸥</h3>
                         <p class="text-muted">毕业于瑞士琉森HTMi酒店管理学校，在瑞士生活12年。精通德语、英语，还会法语、日语哦</p>
                     </div>
@@ -143,128 +338,31 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <img src="img/avatar/huangdaxia.jpg">
+                        <img class="round-corner" src="img/avatar/huangdaxia.jpg">
                         <h3>黄大虾</h3>
                         <p class="text-muted">在瑞16年经验的专业导游，也是家有二宝的超级奶爸</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <img src="img/avatar/louis.jpg">
+                        <img class="round-corner" src="img/avatar/louis.jpg">
                         <h3>Louis Palmer</h3>
                         <p class="text-muted">全球太阳能车环游世界第一人，带你深入瑞士Entlebuch生物圈</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <img src="img/avatar/yang.png">
+                        <img class="round-corner" src="img/avatar/yang.png">
                         <h3>杨锦屏</h3>
                         <p class="text-muted">台湾人，创办杨氏语言学校，在苏黎世超过10年</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <img src="img/avatar/chunlei.jpeg">
+                        <img class="round-corner" src="img/avatar/chunlei.jpeg">
                         <h3>李春雷</h3>
                         <p class="text-muted">瑞士8位明星中文滑雪教练之一，目前已是铁力士山全年户外教练</p>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="no-padding" id="portfolio">
-        <div class="container-fluid">
-            <div class="row no-gutter">
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
                 </div>
             </div>
         </div>
