--- a/luzern.html
+++ b/luzern.html
@@ -83,6 +83,7 @@
                 <h1>琉森，瑞士最美城市</h1>
                 <hr>
                 <p>半日、一日、两日。亲子游私家团 ​</p>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll btn-action">立即报名</a>
             </div>
         </div>
     </header>
@@ -92,34 +93,26 @@
 
     <!-- end of body -->
 
-    <aside class="bg-dark">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
-            </div>
-        </div>
-    </aside>
-
-    <section id="contact">
+    <footer id="contact" class="bg-dark">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
-                    <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                <div class="col-lg-4 col-lg-offset-2">
+                    <p>咨询、报名请关注<br/>微信公众号:Baby-mosh</p>
+                    <p><img src=img/barcode.jpg></p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p>123-456-6789</p>
-                </div>
-                <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                <div class="col-lg-4">
+                    <p>
+                    <a href="https://www.babymosh.com">www.babymosh.com</a><br/>
+                    Email：<a href="mailto:hi@babymosh.com">hi@babymosh.com</a><br/>
+                    电话: +41 79 30 79 570<br/>
+                    </p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">&copy; 2016 Babymosh.com. 上海辰墨信息科技有限公司</div>
+            </div>
         </div>
-    </section>
+    </footer>
 
     <!-- jQuery -->
     <script src="//cdn.bootcss.com/jquery/2.2.1/jquery.min.js"></script>
