--- a/luzern.html
+++ b/luzern.html
@@ -52,7 +52,7 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav">
                     <li>
                         <a href="/">首页</a>
                     </li>
@@ -69,6 +69,9 @@
                         <a href="/">关于</a>
                     </li>
                 </ul>
+                <div class="nav navbar-nav navbar-right">
+                   <a href="#services" class="btn btn-primary">立刻报名</a>
+                </div>
             </div>
             <!-- /.navbar-collapse -->
         </div>
