--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top"><img src="img/logo.png"></a>
+                <a class="navbar-brand" href="/"><img src="img/logo.png"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -233,7 +233,6 @@
         </div>
     </section>
 
-<!--
     <section id="three">
         <div class="container">
             <div class="row">
