--- a/index.html
+++ b/index.html
@@ -60,13 +60,10 @@
                         <a href="/2016summer.html">2016暑期游</a>
                     </li>
                     <li>
-                        <a href="/luzern.html">琉森短途</a>
-                    </li>
-                    <li>
                         <a href="/">博客</a>
                     </li>
                     <li>
-                        <a href="/">关于</a>
+                        <a href="/about.html">关于</a>
                     </li>
                 </ul>
                 <div class="nav navbar-nav navbar-right">
