forgot new about file, chagne blog url

--- a/2016summer.html
+++ b/2016summer.html
@@ -60,7 +60,7 @@
                         <a href="/2016summer.html">2016暑期游</a>
                     </li>
                     <li>
-                        <a href="/">博客</a>
+                        <a href="https://medium.com/babymosh-s-blog">博客</a>
                     </li>
                     <li>
                         <a href="/about.html">关于</a>
