--- a/2016summer.html
+++ b/2016summer.html
@@ -60,14 +60,14 @@
                         <a href="/2016summer.html">2016暑期游</a>
                     </li>
                     <li>
-                        <a href="https://medium.com/babymosh-s-blog">博客</a>
+                        <a href="https://medium.com/babymosh-s-blog" target="_blank">博客</a>
                     </li>
                     <li>
                         <a href="/about.html">关于</a>
                     </li>
                 </ul>
                 <div class="nav navbar-nav navbar-right">
-                   <a href="#services" class="btn btn-primary">立刻报名</a>
+                   <a href="http://form.mikecrm.com/f.php?t=2OAwew" target="_blank" class="btn btn-primary">立刻报名</a>
                 </div>
             </div>
             <!-- /.navbar-collapse -->
@@ -78,16 +78,12 @@
     <header class="sub-header">
     <div class="header-content">
         <div class="header-content-inner">
-
             <h1>瑞士Central深度8天7晚·Babymosh亲子共游</h1>
-            <hr>
             <p>平价首发 限量席位</p>
+            <a href="http://form.mikecrm.com/f.php?t=2OAwew" target="_blank"  class="btn btn-primary btn-xl page-scroll btn-action">立刻报名</a>
         </div>
     </div>
 </header>
-
-
-
 
 <section class="img-bg no-padding" style="background-image: url('img/index/slow.png')">
 	<div class="container">
