--- a/about.html
+++ b/about.html
@@ -60,14 +60,14 @@
                         <a href="/2016summer.html">2016暑期游</a>
                     </li>
                     <li>
-                        <a href="https://medium.com/babymosh-s-blog">博客</a>
+                        <a href="https://medium.com/babymosh-s-blog" target="_blank">博客</a>
                     </li>
                     <li>
                         <a href="/about.html">关于</a>
                     </li>
                 </ul>
                 <div class="nav navbar-nav navbar-right">
-                   <a href="#services" class="btn btn-primary">立刻报名</a>
+                   <a href="http://form.mikecrm.com/f.php?t=2OAwew" target="_blank" class="btn btn-primary">立刻报名</a>
                 </div>
             </div>
             <!-- /.navbar-collapse -->
