--- a/luzern.html
+++ b/luzern.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Babymosh</title>
-
+    <link rel="icon" type="image/png" href="/img/favicon.png">
     <!-- Bootstrap Core CSS -->
     <link href="//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
