--- a/luzern.html
+++ b/luzern.html
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/"><img class="logo" src="img/logo.png"></a>
+                <a class="navbar-brand" href="/"><img class="logo" src="/img/logo.png"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -75,18 +75,17 @@
         <!-- /.container-fluid -->
     </nav>
     <!-- body -->
-    
-    <header class="sub-header">
-        <div class="header-content">
-            <div class="header-content-inner">
+     <header class="sub-header" style="background-image: url('//o42spgxwl.qnssl.com/img/header.jpg');">
+    <div class="header-content">
+        <div class="header-content-inner">
 
-                <h1>琉森，瑞士最美城市</h1>
-                <hr>
-                <p>半日、一日、两日。亲子游私家团 ​</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll btn-action">立即报名</a>
-            </div>
+            <h1>琉森，瑞士最美城市</h1>
+            <hr>
+            <p>半日、一日、两日。亲子游私家团 ​</p>
+            <a href="#about" class="btn btn-primary btn-xl page-scroll btn-action">立即报名</a>
         </div>
-    </header>
+    </div>
+</header>
 
 
 
@@ -126,7 +125,7 @@
     <script src="//cdn.bootcss.com/wow/1.1.2/wow.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="js/creative.js"></script>
+    <script src="/js/creative.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
