--- a/2016summer.html
+++ b/2016summer.html
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/"><img class="logo" src="img/logo.png"></a>
+                <a class="navbar-brand" href="/"><img class="logo" src="/img/logo.png"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -75,7 +75,7 @@
         <!-- /.container-fluid -->
     </nav>
     <!-- body -->
-    <header class="sub-header">
+    <header class="sub-header" style="background-image: url('//o42spgxwl.qnssl.com/img/header.jpg');">
     <div class="header-content">
         <div class="header-content-inner">
             <h1>瑞士Central深度8天7晚·Babymosh亲子共游</h1>
@@ -85,7 +85,7 @@
     </div>
 </header>
 
-<section class="img-bg no-padding" style="background-image: url('img/index/slow.png')">
+<section class="/img-bg no-padding" style="background-image: url('//o42spgxwl.qnssl.com/img/index/slow.png')">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
@@ -133,7 +133,7 @@
         </div>
 </section>
 
-<section class="img-bg no-padding" style="background-image: url('img/index/slow.png')">
+<section class="/img-bg no-padding" style="background-image: url('//o42spgxwl.qnssl.com/img/index/slow.png')">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
@@ -173,7 +173,7 @@
         </div>
 </section>
 
-<section class="img-bg no-padding" style="background-image: url('img/index/slow.png')">
+<section class="/img-bg no-padding" style="background-image: url('//o42spgxwl.qnssl.com/img/index/slow.png')">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
@@ -193,7 +193,7 @@
         </div>
 </section>
 
-<section class="img-bg no-padding" style="background-image: url('img/index/slow.png')">
+<section class="/img-bg no-padding" style="background-image: url('//o42spgxwl.qnssl.com/img/index/slow.png')">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
@@ -207,13 +207,13 @@
 		<div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-					<img src="img/2016summer/timetable.png" class="img-responsive">
+					<img src="//o42spgxwl.qnssl.com/img/2016summer/timetable.png" class="/img-responsive">
                 </div>
             </div>
         </div>
 </section>
 
-<section class="img-bg no-padding" style="background-image: url('img/index/slow.png')">
+<section class="/img-bg no-padding" style="background-image: url('//o42spgxwl.qnssl.com/img/index/slow.png')">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
@@ -337,7 +337,7 @@
     <script src="//cdn.bootcss.com/wow/1.1.2/wow.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="js/creative.js"></script>
+    <script src="/js/creative.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
