--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/"><img class="logo" src="img/logo.png"></a>
+                <a class="navbar-brand" href="/"><img class="logo" src="/img/logo.png"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -75,7 +75,7 @@
         <!-- /.container-fluid -->
     </nav>
     <!-- body -->
-    <header class="sub-header" style="background-image: url('img/about/background.jpg')">
+    <header class="sub-header" style="background-image: url('//o42spgxwl.qnssl.com/img/about/background.jpg')">
     <div class="header-content">
         <div class="header-content-inner">
             <h1>世界这么大<br/>和宝贝牵手去看</h1>
@@ -98,7 +98,7 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1 col-sm-12">
             	<div class="section-left-heading">
-                	<img src="/img/logo-heading.png"><span>Babymosh的告白</span>
+                	<img src="//o42spgxwl.qnssl.com/img/logo-heading.png"><span>Babymosh的告白</span>
                 </div>
             </div>
         </div>
@@ -117,7 +117,7 @@
 <p>用互联网思维来设计亲子旅行体验，更开放透明的信息，更多互动游戏的环节，把有趣的旅行育儿理念都实践起来。</p>
             </div>
             <div class="col-md-3 col-md-offset-1 col-sm-4 col-xs-12">
-            	<img src="/img/about/nattiermax.jpg">
+            	<img src="//o42spgxwl.qnssl.com/img/about/nattiermax.jpg">
             </div>
         </div>
     </div>
@@ -126,13 +126,13 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1 col-sm-12">
             	<div class="section-left-heading">
-                	<img src="/img/logo-heading.png"><span>创始团队</span>
+                	<img src="//o42spgxwl.qnssl.com/img/logo-heading.png"><span>创始团队</span>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-md-3 col-md-offset-1 col-sm-4">
-            	<img class="round-corner" src="img/avatar/nattier.jpg">
+            	<img class="round-corner" src="//o42spgxwl.qnssl.com/img/avatar/nattier.jpg">
             </div>
             <div class="col-md-7 col-sm-8">
 				<h4>陈敏，Nattier</h4>
@@ -154,7 +154,7 @@
 
         <div class="row">
             <div class="col-md-3 col-md-offset-1 col-sm-4">
-            	<img class="round-corner" src="img/avatar/laura.jpg">
+            	<img class="round-corner" src="//o42spgxwl.qnssl.com/img/avatar/laura.jpg">
             </div>
             <div class="col-md-7 col-sm-8">
             	<h4>史晓婧，Laura</h4>
@@ -166,7 +166,7 @@
 
         <div class="row">
             <div class="col-md-3 col-md-offset-1 col-sm-4">
-            	<img class="round-corner" src="img/avatar/ouou.jpg">
+            	<img class="round-corner" src="//o42spgxwl.qnssl.com/img/avatar/ouou.jpg">
             </div>
             <div class="col-md-7 col-sm-8">
 	            <h4>冯怡鸥，鸥鸥</h4>
@@ -180,14 +180,14 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1 col-sm-12">
             	<div class="section-left-heading">
-                	<img src="/img/logo-heading.png"><span>我们的合作者</span>
+                	<img src="//o42spgxwl.qnssl.com/img/logo-heading.png"><span>我们的合作者</span>
                 </div>
             </div>
         </div>
 
         <div class="row">
             <div class="col-md-3 col-md-offset-1 col-sm-4">
-            	<img class="round-corner" src="img/avatar/huangdaxia.jpg">
+            	<img class="round-corner" src="//o42spgxwl.qnssl.com/img/avatar/huangdaxia.jpg">
             </div>
             <div class="col-md-7 col-sm-8">
             	<h4>黄大虾</h4>
@@ -200,7 +200,7 @@
 
         <div class="row">
             <div class="col-md-3 col-md-offset-1 col-sm-4">
-            	<img class="round-corner" src="img/avatar/louis.jpg">
+            	<img class="round-corner" src="//o42spgxwl.qnssl.com/img/avatar/louis.jpg">
             </div>
             <div class="col-md-7 col-sm-8">
             	<h4>Louis Palmer</h4>
@@ -209,7 +209,7 @@
         </div>
         <div class="row">
             <div class="col-md-3 col-md-offset-1 col-sm-4">
-            	<img class="round-corner" src="img/avatar/yang.png">
+            	<img class="round-corner" src="//o42spgxwl.qnssl.com/img/avatar/yang.png">
             </div>
             <div class="col-md-7 col-sm-8">
             	<h4>杨锦屏</h4>
@@ -218,7 +218,7 @@
         </div>
         <div class="row">
             <div class="col-md-3 col-md-offset-1 col-sm-4">
-            	<img class="round-corner" src="img/avatar/louis.jpg">
+            	<img class="round-corner" src="//o42spgxwl.qnssl.com/img/avatar/louis.jpg">
             </div>
             <div class="col-md-7 col-sm-8">
             	<h4>李春雷</h4>
@@ -229,7 +229,7 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1 col-sm-12">
             	<div class="section-left-heading">
-                	<img src="/img/logo-heading.png"><span>加入我们</span>
+                	<img src="//o42spgxwl.qnssl.com/img/logo-heading.png"><span>加入我们</span>
                 </div>
             </div>
         </div>
@@ -287,7 +287,7 @@
     <script src="//cdn.bootcss.com/wow/1.1.2/wow.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="js/creative.js"></script>
+    <script src="/js/creative.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
