fix bug, change blog url

--- a/2016summer.html
+++ b/2016summer.html
@@ -60,7 +60,7 @@
                         <a href="/2016summer.html">2016暑期游</a>
                     </li>
                     <li>
-                        <a href="https://medium.com/babymosh-s-blog" target="_blank">博客</a>
+                        <a href="https://blog.babymosh.com" target="_blank">博客</a>
                     </li>
                     <li>
                         <a href="/about.html">关于</a>
@@ -207,7 +207,7 @@
 		<div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-					<img src="//o42spgxwl.qnssl.com/img/2016summer/timetable.png" class="/img-responsive">
+					<img src="//o42spgxwl.qnssl.com/img/2016summer/timetable.png" class="img-responsive">
                 </div>
             </div>
         </div>
