--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                         <a href="/2016summer.html">2016暑期游</a>
                     </li>
                     <li>
-                        <a href="https://medium.com/babymosh-s-blog" target="_blank">博客</a>
+                        <a href="https://blog.babymosh.com" target="_blank">博客</a>
                     </li>
                     <li>
                         <a href="/about.html">关于</a>
