--- a/2016summer.html
+++ b/2016summer.html
@@ -15,9 +15,10 @@
     <link href="//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Fonts  -->
+    <!--
     <link href='//fonts.lug.ustc.edu.cn/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='//fonts.lug.ustc.edu.cn/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    
+    -->
     <link href="//cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.css" rel="stylesheet">
 
     <!-- Plugin CSS -->
@@ -85,7 +86,7 @@
     </div>
 </header>
 
-<section class="/img-bg no-padding" style="background-image: url('//o42spgxwl.qnssl.com/img/index/slow.png')">
+<section class="img-bg no-padding" style="background-image: url('//o42spgxwl.qnssl.com/img/index/slow.png')">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
@@ -133,7 +134,7 @@
         </div>
 </section>
 
-<section class="/img-bg no-padding" style="background-image: url('//o42spgxwl.qnssl.com/img/index/slow.png')">
+<section class="img-bg no-padding" style="background-image: url('//o42spgxwl.qnssl.com/img/index/slow.png')">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
@@ -173,7 +174,7 @@
         </div>
 </section>
 
-<section class="/img-bg no-padding" style="background-image: url('//o42spgxwl.qnssl.com/img/index/slow.png')">
+<section class="img-bg no-padding" style="background-image: url('//o42spgxwl.qnssl.com/img/index/slow.png')">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
@@ -193,7 +194,7 @@
         </div>
 </section>
 
-<section class="/img-bg no-padding" style="background-image: url('//o42spgxwl.qnssl.com/img/index/slow.png')">
+<section class="img-bg no-padding" style="background-image: url('//o42spgxwl.qnssl.com/img/index/slow.png')">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
@@ -213,7 +214,7 @@
         </div>
 </section>
 
-<section class="/img-bg no-padding" style="background-image: url('//o42spgxwl.qnssl.com/img/index/slow.png')">
+<section class="img-bg no-padding" style="background-image: url('//o42spgxwl.qnssl.com/img/index/slow.png')">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
